[package]
name = "gpcache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { version = "1.3.57", features = ["rustls"] }
reqwest = { version = "0.11.18", features = ["rustls", "rustls-tls"], default-features = false }
tokio = { version = "1.29.1", features = ["full"] }
